First wireing with the backend

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -15,3 +15,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.brand-bg {
+  background-color: #efefeb;
+}
+
+.clickable:hover {
+  cursor: pointer;
+}
